testsuite/tests/rename/should_fail/T25901_sub_w1.stderr
T25901_sub_w1.hs:22:15: error: [GHC-76037]
    Not in scope: type constructor or class ‘G’

T25901_sub_w1.hs:26:17: error: [GHC-76037]
    Not in scope: type constructor or class ‘#’

